<resources>
    <string name="app_name">My Application</string>
    <string name="multi_name">Emotional Trashcan</string>
    <string name="multi_save"> Save </string>
    <string name="multi_trashcan">Trashcan</string>
    <string name="multi_throw"> Throw </string>
    <string name="multi_throw_add_note">Add note</string>
    <string name="multi_throw_caption">Please write a comforting note to you.</string>
    <string name="multi_diary">Diary</string>
    <string name="multi_Moodchart">Mood Chart</string>
    <string name="multi_Moodchart_tablehaader_mood">Mood</string>
    <string name="multi_Moodchart_tablehaader_percent">Percentage</string>
    <string name="multi_Mood">Mood</string>
    <string name="multi_TodoList">Todo List</string>
    <string name="multi_TodoList_set_pin">Pin to top bar</string>
    <string name="multi_TodoList_set_unpin">Unpin to top bar</string>
    <string name="multi_TodoList_no_todo_error">There is no todo list</string>
    <string name="multi_GoalPlanner">Goal Planner</string>
    <string name="multi_GoalPlanner_set_goal">Set Goal</string>
    <string name="multi_GoalPlanner_goal">Goal :  </string>
    <string name="multi_GoalPlanner_alarm">Push Notifications</string>
    <string name="multi_GoalPlanner_startdate">Start Date :  </string>
    <string name="multi_GoalPlanner_enddate">End Date :  </string>
    <string name="multi_GoalPlanner_already_msg">You already have a goal. \nYou can only set one goal.</string>
    <string name="multi_GoalPlanner_fail">Fail</string>
    <string name="multi_GoalPlanner_Success">Success</string>
    <string name="multi_GoalPlanner_fail_caption">If you press OK, it will be considered a failure. \nWould you like to continue?</string>
    <string name="multi_GoalPlanner_Succes_caption">Congratulations on achieving your goals.</string>
    <string name="multi_GoalPlanner_enter_goal_error">Please set your goal.</string>
    <string name="multi_GoalPlanner_enter_out_of_date">The date is out of range.</string>
    <string name="multi_GoalPlanner_enter_out_of_text">Text length is out of range.</string>
    <string name="multi_GoalPlanner_choose_time">Set alarm time.</string>
    <string name="multi_GoalPlanner_set_goal_error">Set your goal first.</string>
    <string name="multi_GoalPlanner_remove_alarm">Successfully turned off alarm.</string>
    <string name="multi_GoalPlanner_over_date_caption">The end date is past. Enter success\/failure.</string>
    <string name="multi_GoalPlanner_alarm_set">You will get a push notification at </string>
    <string name="multi_GoalPlanner_alarm_set_2"> every day.</string>
    <string name="multi_addnote">Add diary</string>
    <string name="multi_add_trash">Throw trash</string>
    <string name="multi_add_trash_caption">Throw your feelings here. I\'ll take it.</string>
    <string name="multi_date">Date :  </string>
    <string name="multi_addphoto">Import Photo </string>
    <string name="multi_Selectone">Select One : </string>
    <string name="multi_camera">CAMERA</string>
    <string name="multi_gallery">GALLERY</string>
    <string name="moodchart_caption">Your monthly mood chart (TOP 5)</string>
    <string name="multi_mon">MON</string>
    <string name="multi_tue">TUE</string>
    <string name="multi_wed">WED</string>
    <string name="multi_thu">THU</string>
    <string name="multi_fri">FRI</string>
    <string name="multi_sat">SAT</string>
    <string name="multi_sun">SUN</string>
    <string name="multi_widget_title">Choose menu</string>
    <string name="multi_widget_caption">Choose menu Diary\/or Trashcan</string>
    <string name="remove_heart_caption">Please select the comforting note you want to erase.</string>
    <string-array name="multi_thorw_comment">
        <item>Today is the first day of the rest of your life.</item>
        <item>You have no problem.</item>
        <item>Today has already passed and you are still pretty and you will be happy tomorrow.</item>
        <item>Don\'t be scared in advance, but when you open it, it\'s nothing.</item>
        <item>Flowers bloom even at the edge of a precipice.</item>
        <item>Don\'t pay too much attention to what\'s wrong. There\'s always a way back.</item>
        <item>Walk your own way.</item>
        <item>Without the dark, we\'d never see the stars.</item>
        <item>There is a crack in everything. That\'s how the light gets in.</item>
        <item>If you can dream it, you can do it.</item>
        <item>It\'s okay.</item>
    </string-array>
    <string name="multi_alert_inputmsg">It can\'t be empty.</string>
    <string name="multi_alert_insert_error">Failed to save.</string>
    <string name="multi_alert_insert_good">Successfully saved.</string>
    <string name="multi_alert_comment_using">This comment is using now.</string>
    <string name="multi_alert_no_data">There is no data.</string>
    <string name="multi_alert_file_not_exist">File is not exist.</string>
    <string name="multi_alert_file_exceed">File cannot exceed 50 MB.</string>
    <string name="multi_coach_marks_write">Tap here to write.</string>
    <string name="multi_coach_marks_add_comment">Tap here to add\/remove comment.</string>
    <string name="multi_coach_marks_add_diary_camera">Tap here to add diary or photo.</string>
    <string name="multi_coach_marks_change_month">Swipe to change month.</string>
    <string name="multi_coach_marks_moodchart_pen">This mark appears on the day you have written the diary.</string>
    <string name="multi_coach_marks_moodchart_input">Tap here to put your mood.</string>
    <string name="multi_coach_marks_todo_heart">Tap here when you did it.</string>
    <string name="multi_coach_marks_todo_date">Tap here to modify the completion date.</string>
    <string name="multi_coach_marks_todo_pin">Tap here to fix\/unfix in the top bar.</string>
    <string name="multi_coach_marks_trash_caption">Your writing will disappear after a day.</string>
    <string name="multi_coach_marks_goal_set_alarm">Tap here to turn on\/off alarm.</string>
    <string name="multi_coach_marks_goal_set_goal">Tap here to set your goal.</string>
    <string name="multi_coach_marks_goal_fail_caption">It appears when you set a goal.
        \nPress if you don\'t achieve your goal.</string>
    <string name="multi_coach_marks_goal_success_caption">Press if you succeed in achieving your goal.</string>
    <string name="multi_coach_marks_main_caption">Thank you for downloading.
        \nI would appreciate it if you could leave a review!
        \nWhen you delete an app, all data disappears.
        \nIt also has a widget function.
        \nPlease press the OK button below.</string>
</resources>
