<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jungeunkwon.myapplication.MoodChart.MoodChartActivity">

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@drawable/btnleft"
            android:id="@+id/activity_mood_btnleft"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/activity_mood_maintxt"
            android:layout_gravity="center"
            android:gravity="center"/>
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@drawable/btnright"
            android:id="@+id/activity_mood_btnright"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="match_parent"
                android:textColor="#ff0000"
                android:text="@string/multi_sun"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/multi_mon"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/multi_tue"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="match_parent"
                android:text="@string/multi_wed"
                android:layout_gravity="center"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/multi_thu"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/multi_fri"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="match_parent"
                android:text="@string/multi_sat"
                android:textColor="#0000ff"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <GridView
            android:numColumns="7"
            android:id="@+id/activity_mood_chart_calender"
            android:verticalSpacing="1dp"
            android:horizontalSpacing="1dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </GridView>
    </LinearLayout>
</FrameLayout>