<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/top_toolbar"
        android:id="@+id/goal_activity_top"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/frame"
            android:padding="5dp"
            android:id="@+id/goal_activity_goal_layout"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >
           <!-- <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/multi_GoalPlanner_goal"/> -->
            <TextView
                android:layout_width="0dp"
                android:layout_margin="2dp"
                android:layout_weight="8"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/goal_activity_lblgoal"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/goal_activity_lblgoalrate"
                android:layout_height="wrap_content" />
            <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
                android:id="@+id/goal_activity_imgicon"
            android:layout_height="match_parent" />
            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="15dp"
                android:layout_gravity="center_vertical|end|right"
                android:id="@+id/goal_activity_btnsuccess"
                android:background="@drawable/heartbutton"
                android:gravity="end|right"/>
            <ImageButton
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical|end|right"
                android:id="@+id/goal_activity_btnfail"
                android:background="@drawable/close"
                android:gravity="end|right"/>
        </LinearLayout>
    <FrameLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="start"
                        android:background="@drawable/btnleft"
                        android:id="@+id/goal_activity_btnleft"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:id="@+id/goal_activity_maintxt"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:background="@drawable/btnright"
                        android:id="@+id/goal_activity_btnright"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_height="match_parent"
                    android:textColor="#ff0000"
                    android:text="@string/multi_sun"
                    android:layout_gravity="center"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/multi_mon"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/multi_tue"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_height="match_parent"
                    android:text="@string/multi_wed"
                    android:layout_gravity="center"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/multi_thu"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/multi_fri"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_height="match_parent"
                    android:text="@string/multi_sat"
                    android:textColor="#ff0000"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>
            <GridView
                android:numColumns="7"
                android:id="@+id/goal_activity_calender"
                android:verticalSpacing="1dp"
                android:horizontalSpacing="1dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            </GridView>
        </LinearLayout>
    </FrameLayout>
    </LinearLayout>
    <include layout="@layout/bottom_toolbar"
        android:id="@+id/goal_activity_bottom"/>
</LinearLayout>
