<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_goal_planner_template"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00000000"
    android:gravity="bottom"
    android:orientation="vertical">
    <include layout="@layout/top_toolbar"
        android:id="@+id/intro_goal_planner_top"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_goal_planner_top"
        android:id="@+id/intro_goal_planner_add"
        android:layout_alignParentEnd="true"
        android:background="@drawable/arrow_down" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro_goal_planner_add"
        android:id="@+id/intro_goal_planner_add_text"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intro_goal_planner_add_text"
        android:layout_alignParentEnd="true"
        android:text="@string/multi_coach_marks_goal_set_alarm"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="0dp"
        android:text="@string/multi_coach_marks_goal_fail_caption"
        android:textColor="#ffffff"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/intro_Goal_planner_info"
        android:src="@drawable/info_goal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_Goal_planner_info"
        android:layout_above="@+id/intro_goal_planner_textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="200dp"
        android:text="@string/multi_coach_marks_goal_success_caption"
        android:textColor="#ffffff"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/intro_goal_planner_textView"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:text="@string/multi_coach_marks_write"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/intro_goal_planner_bottom_toolbar"
        android:layout_alignEnd="@+id/intro_goal_planner_btngotit"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-2dp"
        android:background="@drawable/arrow_up" />

    <ImageButton
        android:id="@+id/intro_goal_planner_btngotit"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/intro_goal_planner_bottom_toolbar"
        android:background="@drawable/heartbutton" />
    <include layout="@layout/bottom_toolbar"
        android:id="@+id/intro_goal_planner_bottom_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        />
</RelativeLayout>